# Deep_Learning

./: pyproject.toml
week_1/: Environment-Setup.ipynb  LinearReg.ipynb  hardware_acceleration.ipynb  matrix_manipulation.ipynb  pytorch_numpy.ipynb  tensor_creation.ipynb
